--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/tradegecko/smaug.git"
   },
   "dependencies": {
-    "@tradegecko/styles": "git+https://50f35d54e06c3a4dc3408924d232d16f522ab729:x-oauth-basic@github.com/tradegecko/tradegecko-assets.git",
+    "@tradegecko/styles": "git+ssh://github.com/tradegecko/tradegecko-assets.git",
     "bootstrap": "^4.1.3"
   },
   "author": "",
